<resources>
    <string name="app_name">MelhorPreco</string>
    <string name="Titulo_main">Melhor Preço</string>
    <string name="title_activity_inicio__carrinho">Inicio_Carrinho</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="Opcao_um">Cadastrar Produto</string>
    <string name="Opcao_dois">Selecionar Produtos</string>
    <string name="Opcao_tres">Realizar Pesquisa</string>
    <string name="produto_Quantidades">Produto: </string>
    <string name="preco_Quantidades">Preço Unitário:   R$   </string>
    <string name="quantidade_Quantidades">Quantidade: </string>
    <string name="BtSalvar_Quantidades">Adicionar </string>
    <string name="BtCancel_Quantidades">Cancelar </string>
    <string name="Codigo_bar_Prod">Código de Barras </string>
    <string name="Descrição_Prod">Descrição </string>
    <string name="BtCadastrar_Prod">Cadastrar </string>
    <string name="BtAlterar_Prod">Alterar </string>
    <string name="BtExcluir_Prod">Excluir </string>
    <string name="Titulo_Compare">Compare </string>
    <string name="produto_ProdutoMercado">Produto: </string>
    <string name="mercado_ProdutoMercado">Mercado: </string>
    <string name="preco_ProdutoMercado">Preço: </string>
    <string name="BtSalvar_ProdutoMercado">Salvar </string>
    <string name="BtCancel_ProdutoMercado">Cancelar </string>
    <string name="BtCarrinho_Compare">Carrinho </string>
    <string name="Titulo_Carrinho">Item   Produto  Quantidade  Preço  Total </string>
    <string name="txtv_alterar_excluir_prod">Produto </string>
    <string name="txtv_alterar_excluir_quant">Quantidade:  </string>
    <string name="precoUnitario_Altera_Excluir">Preço Unitário:  </string>
    <string name="total_Alterar_Excuir">Total:  </string>
    <string name="BtSalvar_Alterar_Excluir">Salvar</string>
    <string name="BtExcluir_Alterar_Excluir">Excluir</string>

</resources>
