<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.luciano.melhorpreco.Produto_mercado"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:weightSum="1">

        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/mercado_ProdutoMercado"
            android:id="@+id/txtMercado"
            android:textSize="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtMercado"
            android:editable="false"
            android:enabled="false"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="91dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/produto_ProdutoMercado"
            android:id="@+id/txtProduto"
            android:textSize="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtProduto"
            android:enabled="false"
            android:editable="false"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="91dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/preco_ProdutoMercado"
            android:id="@+id/txtPreco"
            android:textSize="30dp" />

        <EditText
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edtPreco"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:weightSum="1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/BtSalvar_ProdutoMercado"
            android:id="@+id/btSalvar" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BtCancel_ProdutoMercado"
            android:id="@+id/btCancel"
            android:layout_weight="0.20" />
    </LinearLayout>

</LinearLayout>
